--- a/index.html
+++ b/index.html
@@ -103,6 +103,39 @@
         .container .photo img{
             width: 520px;
         } 
+/*         added button  */
+         .btn-pink {
+        background-color: #e84949;
+        width: fit-content;
+        color: white;
+        padding: 0.8rem 2.3rem;
+        box-shadow: 5px 5px 7px 0px #0000003f;
+        font-size: 18px;
+        cursor: pointer;
+        transition: all 0.5s;
+        font-weight: 500;
+        position: relative;
+        z-index: 1;
+      }
+      .btn-pink::before {
+        content: "";
+        position: absolute;
+        background-color: #1f1f1f;
+        top: 0;
+        left : 0;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: all 0.8s;
+      }
+      .btn-pink:hover::before {
+        transform: scaleX(1);
+      }
+      .btn-pink:hover {
+        color: #fff;
+      }
     </style>
     <title>Delivery Website Landing Page- Coding Power</title>
 </head>
@@ -127,7 +160,7 @@
         <div class="text">
             <h1>Local Store-to-Door Delivery <span>Your Ultimate Convenience</span></h1>
             <p>Discover a world of convenience and speed with our delivery service. We connect you to stores near you, ensuring you receive your favorite products right at your doorstep. Our dedicated team works tirelessly to provide you with the best delivery experience.</p>
-            <button type="button">Download App</button>
+            <button type="button" class="btn-pink" id="btn-top">Download App</button>
         </div>
         <div class="photo">
             <img src="download.png" alt="">
